make UnInhibit not enable a disabled screensaver

BUG: 186908

svn path=/trunk/KDE/kdebase/workspace/; revision=1100542